--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-bin/
 target/
+src-gen/
+xtend-gen/
+bin/
+bundles/io/org.openhab.io.multimedia.tts.marytts/lib/
+.antlr*
+.metadata/
+*/plugin.xml_gen
+
+distribution/openhabhome/logs/*.log
+distribution/openhabhome/*.zip
+distribution/openhabhome/etc/rrd4j/*.rrd
