add a project named with org.openhab.designerx.server

--- a/bundles/designerx/modelrepository/pom.xml
+++ b/bundles/designerx/modelrepository/pom.xml
@@ -7,4 +7,5 @@
   </parent>
   <artifactId>modelrepository</artifactId>
   <packaging>pom</packaging>
+  <groupId>org.openhab.bundles.designerx</groupId>
 </project>
