--- a/bundles/designerx/server/pom.xml
+++ b/bundles/designerx/server/pom.xml
@@ -7,4 +7,9 @@
   </parent>
   <artifactId>server</artifactId>
   <packaging>pom</packaging>
+  <groupId>org.openhab.bundles.designerx</groupId>
+  <modules>
+  	<module>org.openhab.designerx.server.xtext</module>
+  	<module>org.openhab.designerx.server</module>
+  </modules>
 </project>
