--- a/bundles/designerx/persistence/pom.xml
+++ b/bundles/designerx/persistence/pom.xml
@@ -7,4 +7,5 @@
   </parent>
   <artifactId>persistence</artifactId>
   <packaging>pom</packaging>
+  <groupId>org.openhab.bundles.designerx</groupId>
 </project>
