--- a/bundles/designerx/server/org.openhab.designerx.server/.project
+++ b/bundles/designerx/server/org.openhab.designerx.server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhab.designerx.model.core</name>
+	<name>org.openhab.designerx.server</name>
 	<comment></comment>
 	<projects>
 	</projects>
