--- a/bundles/designerx/server/org.openhab.designerx.server/pom.xml
+++ b/bundles/designerx/server/org.openhab.designerx.server/pom.xml
@@ -1,11 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.openhab.designerx.server</groupId>
+  <artifactId>org.openhab.designerx.server</artifactId>
   <parent>
-    <groupId>org.openhab.bundles</groupId>
-    <artifactId>designerx</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+  	<groupId>org.openhab.bundles.designerx</groupId>
+  	<artifactId>server</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>core</artifactId>
-  <packaging>pom</packaging>
-  <groupId>org.openhab.bundles.designerx</groupId>
 </project>
