--- a/bundles/designerx/ui/pom.xml
+++ b/bundles/designerx/ui/pom.xml
@@ -7,4 +7,5 @@
   </parent>
   <artifactId>ui</artifactId>
   <packaging>pom</packaging>
+  <groupId>org.openhab.bundles.designerx</groupId>
 </project>
