--- a/bundles/designerx/config/org.openhab.designerx.config/pom.xml
+++ b/bundles/designerx/config/org.openhab.designerx.config/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openhab.designerx.config</groupId>
-  <artifactId>org.openhab.designerx.config</artifactId>
-  <parent>
-  	<groupId>org.openhab.bundles.designerx</groupId>
-  	<artifactId>config</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.openhab.bundles.designerx</groupId>
+		<artifactId>config</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>org.openhab.designerx.config</artifactId>
+
+	<groupId>org.openhab.designerx.config</groupId>
 </project>
