--- a/bundles/designerx/config/pom.xml
+++ b/bundles/designerx/config/pom.xml
@@ -1,14 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.openhab.bundles</groupId>
-    <artifactId>designerx</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>config</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>org.openhab.designerx.config</module>
-  </modules>
-  <groupId>org.openhab.bundles.designerx</groupId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.openhab.bundles</groupId>
+		<artifactId>designerx</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>config</artifactId>
+	<packaging>pom</packaging>
+	<groupId>org.openhab.bundles.designerx</groupId>
+	<modules>
+		<module>org.openhab.designerx.config</module>
+	</modules>
+
 </project>
