--- a/bundles/designerx/model/org.openhab.designerx.model/.classpath
+++ b/bundles/designerx/model/org.openhab.designerx.model/.classpath
@@ -33,6 +33,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
