'lib' module added so as to store all the jars for designerx

--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -17,5 +17,6 @@
 		<module>persistence</module>
 		<module>server</module>
 		<module>config</module>
+		<module>lib</module>
 	</modules>
 </project>
