--- a/bundles/designerx/config/org.openhab.designerx.config/.classpath
+++ b/bundles/designerx/config/org.openhab.designerx.config/.classpath
@@ -32,8 +32,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/lib/guava-15.0.jar"/>
-	<classpathentry kind="lib" path="/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/lib/com/google/guava/guava/15.0/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="/lib/junit/junit/4.11/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
