--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -1,14 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.openhab</groupId>
 		<artifactId>bundles</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+
 	<groupId>org.openhab.bundles</groupId>
 	<artifactId>designerx</artifactId>
 	<packaging>pom</packaging>
+
 	<modules>
 		<module>model</module>
 		<module>ui</module>
@@ -17,6 +20,28 @@
 		<module>persistence</module>
 		<module>server</module>
 		<module>config</module>
-		<module>lib</module>
 	</modules>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.11</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.3</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>15.0</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
