--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -20,28 +20,6 @@
 		<module>persistence</module>
 		<module>server</module>
 		<module>config</module>
+		<module>dependency</module>
 	</modules>
-	
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.11</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-all</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>15.0</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
