--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -20,6 +20,7 @@
 		<module>persistence</module>
 		<module>server</module>
 		<module>config</module>
-		<module>dependency</module>
+		
+		<module>dependencies</module>
 	</modules>
 </project>
