1. refine to 'org.openhab.designerx' the groupId of dependencies module; 2. add the modelrepository module

--- a/bundles/designerx/dependencies/org.openhab.designerx.dependencies/pom.xml
+++ b/bundles/designerx/dependencies/org.openhab.designerx.dependencies/pom.xml
@@ -7,7 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   
-  <groupId>org.openhab.designerx.dependencies</groupId>
+  <groupId>org.openhab.designerx</groupId>
   <artifactId>org.openhab.designerx.dependencies</artifactId>
   <packaging>pom</packaging>
   
