--- a/bundles/designerx/model/org.openhab.designerx.model/pom.xml
+++ b/bundles/designerx/model/org.openhab.designerx.model/pom.xml
@@ -14,7 +14,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.openhab.designerx.dependencies</groupId>
+				<groupId>org.openhab.designerx</groupId>
 				<artifactId>org.openhab.designerx.dependencies</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 				<type>pom</type>
