--- a/bundles/designerx/modelrepository/pom.xml
+++ b/bundles/designerx/modelrepository/pom.xml
@@ -8,4 +8,7 @@
   <artifactId>modelrepository</artifactId>
   <packaging>pom</packaging>
   <groupId>org.openhab.bundles.designerx</groupId>
+  <modules>
+  	<module>org.openhab.designerx.modelrepository</module>
+  </modules>
 </project>
