--- a/bundles/designerx/modelrepository/org.openhab.designerx.modelrepository/pom.xml
+++ b/bundles/designerx/modelrepository/org.openhab.designerx.modelrepository/pom.xml
@@ -25,6 +25,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.openhab.designerx</groupId>
+			<artifactId>org.openhab.designerx.model</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
