start parsing childless sitemap elements

--- a/bundles/designerx/model/pom.xml
+++ b/bundles/designerx/model/pom.xml
@@ -10,5 +10,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>org.openhab.designerx.model</module>
+  	<module>org.openhab.designerx.model.xtext</module>
   </modules>
 </project>
