add into the 'util' module the StringHelper class

--- a/bundles/designerx/util/org.openhab.designerx.util/pom.xml
+++ b/bundles/designerx/util/org.openhab.designerx.util/pom.xml
@@ -11,4 +11,34 @@
 	<groupId>org.openhab.designerx</groupId>
 	<artifactId>org.openhab.designerx.util</artifactId>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.openhab.designerx</groupId>
+				<artifactId>org.openhab.designerx.dependencies</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+	</dependencies>
+
 </project>
