add a new maven module: model.xtdex

--- a/bundles/designerx/model/pom.xml
+++ b/bundles/designerx/model/pom.xml
@@ -11,5 +11,6 @@
   <modules>
   	<module>org.openhab.designerx.model</module>
   	<module>org.openhab.designerx.model.xtext</module>
+  	<module>org.openhab.designerx.model.xtdex</module>
   </modules>
 </project>
