add sitemap unit tests

--- a/bundles/designerx/persistence/org.openhab.designerx.persistence.xtext/pom.xml
+++ b/bundles/designerx/persistence/org.openhab.designerx.persistence.xtext/pom.xml
@@ -82,7 +82,7 @@
 							<outputDirectory>${basedir}/target</outputDirectory>
 							<resources>
 								<resource>
-									<directory>${basedir}/test</directory>
+									<directory>${basedir}/_test</directory>
 								</resource>
 							</resources>
 						</configuration>
