add the domain object module which hold the business logic(not application logic)

--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -21,6 +21,7 @@
 		<module>server</module>
 		<module>ui</module>
 		<module>util</module>
+		<module>domainobject</module>
 	</modules>
 	
 </project>
