add sources files forgotten to add into git

--- a/bundles/designerx/pom.xml
+++ b/bundles/designerx/pom.xml
@@ -22,6 +22,7 @@
 		<module>ui</module>
 		<module>util</module>
 		<module>domainobject</module>
+		<module>bizlogic</module>
 	</modules>
 	
 </project>
