designerx can list the names(without suffixes like '.items') of item resources and sitemaps

--- a/bundles/designerx/ui/org.openhab.designerx.ui.javafx/pom.xml
+++ b/bundles/designerx/ui/org.openhab.designerx.ui.javafx/pom.xml
@@ -29,6 +29,38 @@
 			<artifactId>javafx</artifactId>
 			<version>2.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openhab.designerx</groupId>
+			<artifactId>org.openhab.designerx.util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openhab.designerx</groupId>
+			<artifactId>org.openhab.designerx.config</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openhab.designerx.repo</groupId>
+			<artifactId>org.openhab.designerx.repo.queryrepo</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
